feat: complete AWS Bedrock AI integration with comprehensive testing
AWS Bedrock Integration:
- Implement bedrock configuration, client setup, and service layer
- Add CV analysis service with AI-powered content extraction
- Create portfolio generation service with template support
- Include AI service base classes and error handling

Testing Suite:
- Comprehensive AI integration tests with multiple scenarios
- Bedrock service validation and permission debugging
- CV analysis and portfolio generation validation tests
- Demo workflows and integration test suites

New Features:
- Companies management module with models and APIs
- Jobs management system with search and filtering
- Peer groups networking system with membership
- Background tasks for authentication and profiles

Documentation:
- Add AWS Bedrock integration summary and setup guide
- Include sample resume for testing
- Add comprehensive documentation structure

Utilities:
- Django management commands for bedrock testing
- Service layer for AI operations
- Configuration management for AWS services

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,10 @@ Thumbs.db
 # Temporary files
 tmp/
 temp/
+
+# Storage directory (user data)
+storage/
+# Keep storage structure documentation
+!storage/.gitkeep
+!docs/storage_structure.md
+/api/comprehensive_cv_analysis/*
