--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,6 +3,7 @@ Django==4.2.7
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 djangorestframework-simplejwt==5.3.0
+django-filter==23.5
 
 # Database
 psycopg2-binary==2.9.9
@@ -27,6 +28,7 @@ django-celery-results==2.5.1
 # File handling and utilities
 Pillow==10.1.0
 python-decouple==3.8
+PyMuPDF==1.26.5
 
 # Development and debugging
 django-extensions==3.2.3
