--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,7 @@ DJANGO_CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
 # Next.js Configuration
 NEXT_PUBLIC_API_URL=http://localhost:8000/api/v1
+NEXT_PUBLIC_USE_MOCK_API=false
 NEXTAUTH_SECRET=your-nextauth-secret-change-in-production
 NEXTAUTH_URL=http://localhost:3000
 
