--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -35,3 +35,8 @@ django-extensions==3.2.3
 
 # Production server
 gunicorn==21.2.0
+setuptools
+
+# Monitoring and metrics
+prometheus_client==0.19.0
+django-prometheus==2.3.1
