--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -362,6 +362,7 @@ services:
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
       - NEXTAUTH_URL=${NEXTAUTH_URL}
       - NODE_ENV=development
+      - DOCKER_CONTAINER=true
     volumes:
       - ./web:/app
       - /app/node_modules
