feat: add production environment configuration template

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,82 +1,104 @@
-# Production Environment Variables
-# Copy this file to .env.production and update with your production values
+# Production Environment Variables for Koroh Platform
+# Copy this file to .env.production and update the values for your production environment
+
+# Environment
+NODE_ENV=production
+DJANGO_DEBUG=False
+
+# Database Configuration (Use managed database service in production)
+POSTGRES_DB=koroh_production_db
+POSTGRES_USER=koroh_prod_user
+POSTGRES_PASSWORD=CHANGE_THIS_STRONG_PASSWORD_IN_PRODUCTION
+POSTGRES_HOST=your-production-db-host.com
+POSTGRES_PORT=5432
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+
+# Redis Configuration (Use managed Redis service in production)
+REDIS_HOST=your-production-redis-host.com
+REDIS_PORT=6379
+REDIS_PASSWORD=CHANGE_THIS_REDIS_PASSWORD_IN_PRODUCTION
+REDIS_URL=redis://:${REDIS_PASSWORD}@${REDIS_HOST}:${REDIS_PORT}/0
+
+# MeiliSearch Configuration (Use managed search service in production)
+MEILISEARCH_HOST=your-production-meilisearch-host.com
+MEILISEARCH_PORT=7700
+MEILISEARCH_URL=https://${MEILISEARCH_HOST}:${MEILISEARCH_PORT}
+MEILISEARCH_MASTER_KEY=CHANGE_THIS_MEILISEARCH_KEY_IN_PRODUCTION
 
 # Django Configuration
-DJANGO_SECRET_KEY=your-super-secret-django-key-change-this-in-production
-DEBUG=False
-DJANGO_ALLOWED_HOSTS=api.koroh.dev,koroh.dev,www.koroh.dev
+DJANGO_SECRET_KEY=CHANGE_THIS_DJANGO_SECRET_KEY_IN_PRODUCTION_MINIMUM_50_CHARS
+DJANGO_ALLOWED_HOSTS=your-domain.com,api.your-domain.com,www.your-domain.com
+DJANGO_CORS_ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
+DJANGO_SECURE_SSL_REDIRECT=True
+DJANGO_SECURE_HSTS_SECONDS=31536000
+DJANGO_SECURE_HSTS_INCLUDE_SUBDOMAINS=True
+DJANGO_SECURE_HSTS_PRELOAD=True
+DJANGO_SECURE_CONTENT_TYPE_NOSNIFF=True
+DJANGO_SECURE_BROWSER_XSS_FILTER=True
+DJANGO_SESSION_COOKIE_SECURE=True
+DJANGO_CSRF_COOKIE_SECURE=True
 
-# Database Configuration
-POSTGRES_DB=koroh_platform
-POSTGRES_USER=koroh_user
-POSTGRES_PASSWORD=secure-database-password-change-this
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
+# Next.js Configuration
+NEXT_PUBLIC_API_URL=https://api.your-domain.com/api/v1
+NEXT_PUBLIC_USE_MOCK_API=false
+NEXT_PUBLIC_SHOW_ERROR_DETAILS=false
+NEXTAUTH_SECRET=CHANGE_THIS_NEXTAUTH_SECRET_IN_PRODUCTION_MINIMUM_32_CHARS
+NEXTAUTH_URL=https://your-domain.com
 
-# Redis Configuration
-REDIS_URL=redis://redis:6379/0
-
-# Celery Configuration
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
-
-# AWS Configuration
-AWS_ACCESS_KEY_ID=your-aws-access-key-id
-AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+# AWS Configuration (Required for AI features)
+AWS_ACCESS_KEY_ID=YOUR_PRODUCTION_AWS_ACCESS_KEY
+AWS_SECRET_ACCESS_KEY=YOUR_PRODUCTION_AWS_SECRET_KEY
 AWS_DEFAULT_REGION=us-east-1
 AWS_BEDROCK_REGION=us-east-1
-AWS_BEDROCK_DEFAULT_MODEL=anthropic.claude-3-sonnet-20240229-v1:0
-AWS_BEDROCK_TIMEOUT=30
-AWS_BEDROCK_MAX_RETRIES=3
+AWS_BEDROCK_MODEL_ID=qwen.qwen3-32b-v1:0
+AWS_BEDROCK_MAX_TOKENS=4096
+AWS_BEDROCK_TEMPERATURE=0.7
 
-# MeiliSearch Configuration
-MEILISEARCH_URL=http://meilisearch:7700
-MEILISEARCH_MASTER_KEY=secure-meilisearch-master-key-change-this
-
-# Email Configuration
-EMAIL_HOST=smtp.gmail.com
+# Email Configuration (Use production email service)
+EMAIL_HOST=smtp.your-email-provider.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=your-email@gmail.com
-EMAIL_HOST_PASSWORD=your-email-password
-DEFAULT_FROM_EMAIL=noreply@koroh.dev
+EMAIL_USE_SSL=False
+EMAIL_HOST_USER=your-email@your-domain.com
+EMAIL_HOST_PASSWORD=YOUR_EMAIL_PASSWORD
+DEFAULT_FROM_EMAIL=noreply@your-domain.com
 
-# CORS Configuration
-DJANGO_CORS_ALLOWED_ORIGINS=https://koroh.dev,https://www.koroh.dev
+# Celery Configuration
+CELERY_BROKER_URL=${REDIS_URL}
+CELERY_RESULT_BACKEND=${REDIS_URL}
 
-# Monitoring Configuration
-GRAFANA_ADMIN_PASSWORD=secure-grafana-password-change-this
-PROMETHEUS_RETENTION_TIME=30d
+# Monitoring Configuration (Optional - remove if not using)
+PROMETHEUS_PORT=9090
+GRAFANA_PORT=3001
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=CHANGE_THIS_GRAFANA_PASSWORD_IN_PRODUCTION
 
-# Application Configuration
-APP_VERSION=1.0.0
-AI_SERVICES_ENABLED=True
-PORTFOLIO_GENERATION_ENABLED=True
-PEER_GROUPS_ENABLED=True
-MONITORING_ENABLED=True
+# Security Headers
+SECURE_PROXY_SSL_HEADER=HTTP_X_FORWARDED_PROTO,https
+USE_X_FORWARDED_HOST=True
+USE_X_FORWARDED_PORT=True
 
-# SSL Configuration (for production)
-SSL_CERT_PATH=/etc/ssl/certs/koroh.crt
-SSL_KEY_PATH=/etc/ssl/private/koroh.key
-
-# Backup Configuration
-BACKUP_ENABLED=True
-BACKUP_SCHEDULE=0 2 * * *  # Daily at 2 AM
-BACKUP_RETENTION_DAYS=30
-BACKUP_S3_BUCKET=koroh-backups
-
-# Log Configuration
+# Logging Configuration
 LOG_LEVEL=INFO
-LOG_MAX_SIZE=100MB
-LOG_BACKUP_COUNT=10
+SENTRY_DSN=YOUR_SENTRY_DSN_FOR_ERROR_TRACKING
 
-# Performance Configuration
-GUNICORN_WORKERS=4
-GUNICORN_WORKER_CLASS=gevent
-GUNICORN_WORKER_CONNECTIONS=1000
-GUNICORN_MAX_REQUESTS=1000
-
-# Security Configuration
+# Rate Limiting
 RATE_LIMIT_ENABLED=True
-SECURITY_HEADERS_ENABLED=True
-CSRF_PROTECTION_ENABLED=True
+RATE_LIMIT_PER_MINUTE=60
+
+# File Upload Limits
+MAX_FILE_SIZE=10485760  # 10MB in bytes
+ALLOWED_FILE_TYPES=pdf,doc,docx,txt
+
+# Application URLs
+FRONTEND_URL=https://your-domain.com
+API_URL=https://api.your-domain.com
+
+# SSL/TLS Configuration
+SSL_CERT_PATH=/path/to/ssl/cert.pem
+SSL_KEY_PATH=/path/to/ssl/private.key
+
+# Backup Configuration (Optional)
+BACKUP_ENABLED=True
+BACKUP_S3_BUCKET=your-backup-bucket
+BACKUP_RETENTION_DAYS=30
