feat: update environment variables template with production settings

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,12 @@ AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 AWS_DEFAULT_REGION=us-east-1
 AWS_BEDROCK_REGION=us-east-1
 
+# AI Chat Response Configuration
+AI_CHAT_CONCISE_MODE=True
+AI_CHAT_MAX_RESPONSE_WORDS=50
+AI_CHAT_MAX_RESPONSE_CHARS=500
+AI_CHAT_ENABLE_CONTEXT_OPTIMIZATION=True
+
 # Email Configuration (MailHog for development)
 EMAIL_HOST=mailhog
 EMAIL_PORT=1025
