--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,10 @@
     "@types/react-dropzone": "^4.2.2",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
+    "critters": "^0.0.23",
+    "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.294.0",
     "next": "15.5.6",
     "prom-client": "^15.1.3",
@@ -29,7 +32,8 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.48.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.22.0"
+    "zod": "^3.22.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
