--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
@@ -112,7 +110,7 @@ services:
     command:
       - '--path.rootfs=/host'
     volumes:
-      - '/:/host:ro,rslave'
+      - '/:/host:ro'
     ports:
       - "9100:9100"
     networks:
@@ -337,6 +335,14 @@ services:
       dockerfile: Dockerfile
     container_name: koroh_celery_flower
     environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
       - CELERY_BROKER_URL=${CELERY_BROKER_URL}
       - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
       - FLOWER_BASIC_AUTH=${FLOWER_BASIC_AUTH:-admin:admin}
